# COMP-371

./: CMakeLists.txt  main.cpp  readme.md
Assignment1/: DynamicArray.cpp  DynamicArray.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h  assignment1.cpp
